--- a/src/scss/modifiers.scss
+++ b/src/scss/modifiers.scss
@@ -112,6 +112,9 @@
 .w720 {
   width: 720px;
 }
+.w-full {
+  width: 100%;
+}
 .w100 {
   width: 100px;
 }
@@ -126,6 +129,9 @@
 }
 .w260 {
   width: 260px;
+}
+.h360 {
+  height: 360px;
 }
 .p0 {
   padding: 0 !important;
