--- a/src/app/modules/converter/components/form/form.component.html
+++ b/src/app/modules/converter/components/form/form.component.html
@@ -1,7 +1,11 @@
 <div class="page-title-bar">
-    <app-title class="page-title mr-auto">Загрузка тестов</app-title>
+    <app-title class="page-title mr-auto">
+        Загрузка тестов
+    </app-title>
     <app-buttons>
         <button
+            [disabled]="form.pristine || form.invalid"
+            (click)="convert()"
             type="button"
             color="primary"
             mat-raised-button
@@ -12,6 +16,16 @@
 </div>
 <app-card [formGroup]="form">
     <div class="wrapper">
+        <app-row>
+            <mat-form-field appearance="outline" class="w230">
+                <mat-label>Количество параметров</mat-label>
+                <input
+                    matInput
+                    required
+                    formControlName="paramsLength"
+                    [appInputMask]="{ alias: 'integer' }">
+            </mat-form-field>
+        </app-row>
         <app-row>
             <mat-form-field class="w-full textarea" appearance="outline">
                 <mat-label>Тесты</mat-label>
