--- a/src/app/modules/converter/components/list/list.component.html
+++ b/src/app/modules/converter/components/list/list.component.html
@@ -3,42 +3,42 @@
 
         <ng-container matColumnDef="number">
             <th mat-header-cell *matHeaderCellDef>Проход</th>
-            <td mat-cell *matCellDef="let item"> {{item.position}} </td>
+            <td mat-cell *matCellDef="let item"> {{item.number}} </td>
         </ng-container>
 
         <ng-container matColumnDef="profit">
             <th mat-header-cell *matHeaderCellDef>Прибыль</th>
-            <td mat-cell *matCellDef="let item"> {{item.name}} </td>
+            <td mat-cell *matCellDef="let item"> {{item.profit}} </td>
         </ng-container>
 
         <ng-container matColumnDef="value">
             <th mat-header-cell *matHeaderCellDef>Всего сделок</th>
-            <td mat-cell *matCellDef="let item"> {{item.weight}} </td>
+            <td mat-cell *matCellDef="let item"> {{item.value}} </td>
         </ng-container>
 
         <ng-container matColumnDef="profitable">
             <th mat-header-cell *matHeaderCellDef>Прибыльность</th>
-            <td mat-cell *matCellDef="let item"> {{item.symbol}} </td>
+            <td mat-cell *matCellDef="let item"> {{item.profitable}} </td>
         </ng-container>
 
         <ng-container matColumnDef="mathExpectation">
             <th mat-header-cell *matHeaderCellDef>Матожидание</th>
-            <td mat-cell *matCellDef="let item"> {{item.symbol}} </td>
+            <td mat-cell *matCellDef="let item"> {{item.mathExpectation}} </td>
         </ng-container>
 
         <ng-container matColumnDef="dropDownCurrency">
             <th mat-header-cell *matHeaderCellDef>Просадка $</th>
-            <td mat-cell *matCellDef="let item"> {{item.symbol}} </td>
+            <td mat-cell *matCellDef="let item"> {{item.dropDownCurrency}} </td>
         </ng-container>
 
         <ng-container matColumnDef="dropDownPercent">
             <th mat-header-cell *matHeaderCellDef>Просадка %</th>
-            <td mat-cell *matCellDef="let item"> {{item.symbol}} </td>
+            <td mat-cell *matCellDef="let item"> {{item.dropDownPercent}} </td>
         </ng-container>
 
         <ng-container matColumnDef="params">
             <th mat-header-cell *matHeaderCellDef>Параметры</th>
-            <td mat-cell *matCellDef="let item"> {{item.symbol}} </td>
+            <td mat-cell *matCellDef="let item"> {{item.params}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="columns"></tr>
