add backtest helpers

--- a/src/app/modules/converter/components/form/form.component.html
+++ b/src/app/modules/converter/components/form/form.component.html
@@ -8,8 +8,7 @@
             (click)="convert()"
             type="button"
             color="primary"
-            mat-raised-button
-            routerLink="list">
+            mat-raised-button>
             Конвертировать
         </button>
     </app-buttons>
