--- a/src/app/modules/converter/components/list/list.component.html
+++ b/src/app/modules/converter/components/list/list.component.html
@@ -60,21 +60,11 @@
         <tr mat-row *matRowDef="let row; columns: columns;"></tr>
     </table>
 
-<!--    <mat-paginator-->
-<!--        [length]="pagination.count"-->
-<!--        [pageIndex]="pagination.pageIndex"-->
-<!--        [pageSize]="pagination.pageSize"-->
-<!--        [pageSizeOptions]="pagination.options"-->
-<!--        (page)="onPageChange($event)">-->
-<!--    </mat-paginator>-->
+    <mat-paginator
+        [length]="pagination.count"
+        [pageIndex]="pagination.pageIndex"
+        [pageSize]="pagination.pageSize"
+        [pageSizeOptions]="pagination.options"
+        (page)="onPageChange($event)">
+    </mat-paginator>
 </app-card>
-<div style="height: 900px;"></div>
-<app-buttons>
-    <button
-        type="button"
-        color="primary"
-        mat-raised-button
-        routerLink="..">
-        Назад
-    </button>
-</app-buttons>
