--- a/src/app/modules/converter/components/list/list.component.html
+++ b/src/app/modules/converter/components/list/list.component.html
@@ -21,6 +21,11 @@
             <td mat-cell *matCellDef="let item"> {{item.number}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="profitToDropDown">
+            <th mat-header-cell *matHeaderCellDef>Прибыль/Просадка</th>
+            <td mat-cell *matCellDef="let item"> {{item.profitToDropDown | number: '1.2-2'}} </td>
+        </ng-container>
+
         <ng-container matColumnDef="profit">
             <th mat-header-cell *matHeaderCellDef>Прибыль</th>
             <td mat-cell *matCellDef="let item"> {{item.profit}} </td>
