--- a/src/app/modules/converter/components/list/list.component.html
+++ b/src/app/modules/converter/components/list/list.component.html
@@ -67,7 +67,7 @@
 
     <mat-paginator
         class="mb-2"
-        [length]="pagination.count"
+        [length]="pagination.total"
         [pageIndex]="pagination.pageIndex"
         [pageSize]="pagination.pageSize"
         [pageSizeOptions]="pagination.options"
