feat (single filter) add single filter row component

--- a/src/app/modules/converter/components/list/list.component.html
+++ b/src/app/modules/converter/components/list/list.component.html
@@ -13,6 +13,10 @@
     </app-buttons>
 </div>
 
+<app-row>
+    <app-filter></app-filter>
+</app-row>
+
 <app-card>
     <table mat-table [dataSource]="rows" class="tb">
 
