--- a/src/scss/modifiers.scss
+++ b/src/scss/modifiers.scss
@@ -409,21 +409,11 @@
     width: 100%;
   }
 }
-// TODO: лишнее?
-// .loading {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   right: 0;
-//   bottom: 0;
-//   z-index: 1;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   background-color: rgba(255, 255, 255, 0.85);
-// }
 .d-flex {
   display: flex;
+}
+.d-block {
+    display: block;
 }
 .d-end {
   justify-content: flex-end;
