--- a/src/app/modules/converter/components/filter-param/filter-param.component.html
+++ b/src/app/modules/converter/components/filter-param/filter-param.component.html
@@ -1,11 +1,11 @@
 <app-card [formGroup]="form">
     <app-row>
-        <mat-form-field class="w230" appearance="outline">
-            <mat-label>Название поля</mat-label>
+        <mat-form-field class="w200" appearance="outline">
+            <mat-label>Параметр</mat-label>
             <input matInput required formControlName="paramSn">
         </mat-form-field>
 
-        <mat-form-field appearance="outline" class="w230">
+        <mat-form-field appearance="outline" class="w180">
             <mat-label>Тип фильтра</mat-label>
             <mat-select required formControlName="filterType">
                 <mat-option [value]="FilterType.Numeric">Числовой</mat-option>
@@ -13,28 +13,50 @@
             </mat-select>
         </mat-form-field>
 
-        <div *ngIf=" form.get('filterType').value && form.get('filterType').value !== FilterType.Boolean">
-            <mat-form-field class="w230 mr15" appearance="outline">
+        <div class="d-flex" *ngIf=" form.get('filterType').value && form.get('filterType').value !== FilterType.Boolean">
+            <mat-form-field class="w180 mr15" appearance="outline">
                 <mat-label>Тип сравнения</mat-label>
                 <mat-select required formControlName="compareType">
                     <mat-option [value]="ComparisonType.More">Больше</mat-option>
                     <mat-option [value]="ComparisonType.Less">Меньше</mat-option>
                     <mat-option [value]="ComparisonType.Equal">Равно</mat-option>
+                    <mat-option [value]="ComparisonType.Range">Диапазон</mat-option>
                 </mat-select>
             </mat-form-field>
 
-            <mat-form-field class="w230 ml10" appearance="outline">
-                <mat-label>Значение</mat-label>
-                <input
-                    matInput
-                    required
-                    formControlName="value"
-                    [appInputMask]="{ alias: 'numeric', digits: 2 }">
-            </mat-form-field>
+            <div *ngIf="form.get('compareType').value && form.get('compareType').value !== ComparisonType.Range">
+                <mat-form-field class="w180 ml10" appearance="outline">
+                    <mat-label>Значение</mat-label>
+                    <input
+                        matInput
+                        required
+                        formControlName="value"
+                        [appInputMask]="{ alias: 'numeric', digits: 2 }">
+                </mat-form-field>
+            </div>
+
+            <div *ngIf="form.get('compareType').value && form.get('compareType').value === ComparisonType.Range">
+                <mat-form-field class="w180 ml10" appearance="outline">
+                    <mat-label>Значение от</mat-label>
+                    <input matInput
+                        required
+                        formControlName="valueFrom"
+                        [appInputMask]="{ alias: 'numeric', digits: 2 }">
+                </mat-form-field>
+
+                <mat-form-field class="w180 ml20" appearance="outline">
+                    <mat-label>Значение до</mat-label>
+                    <input
+                        matInput
+                        required
+                        formControlName="valueTo"
+                        [appInputMask]="{ alias: 'numeric', digits: 2 }">
+                </mat-form-field>
+            </div>
         </div>
 
         <div *ngIf="form.get('filterType').value && form.get('filterType').value === FilterType.Boolean">
-            <mat-form-field appearance="outline" class="w230">
+            <mat-form-field appearance="outline" class="w180">
                 <mat-label>Значение</mat-label>
                 <mat-select required formControlName="value">
                     <mat-option [value]="true">True</mat-option>
@@ -47,9 +69,9 @@
             <button
                 mat-icon-button
                 class="item__action"
-                (click)="form.disabled ? form.enable() : form.disable()">
+                (click)="switchOn()">
                 <mat-icon [color]="form.disabled ? 'warn' : 'primary'">
-                    {{ form.disabled ? 'power_off' : 'power' }}
+                    {{ form.disabled || form.invalid ? 'power_off' : 'power' }}
                 </mat-icon>
             </button>
 
