--- a/src/scss/custom-material.scss
+++ b/src/scss/custom-material.scss
@@ -421,9 +421,12 @@ mat-form-field .mat-form-field {
   .mat-form-field-infix {
     padding: 7px 0 13px 0;
   }
+  .mat-select-value {
+    color: #0C2340;
+  }
   .mat-form-field-label {
     top: 24px;
-    color: #000000;
+    color: #0C2340;
   }
   mat-icon,
   .mat-select-arrow {
@@ -433,7 +436,7 @@ mat-form-field .mat-form-field {
     color: #0C2340;
   }
   .mat-input-element:disabled {
-    color: #000000;
+    color: #0C2340;
   }
   .mat-form-field-flex {
     padding: 0 16px;
@@ -485,7 +488,7 @@ mat-form-field .mat-form-field {
 }
 .mat-form-field-appearance-outline.mat-form-field-disabled {
   .mat-form-field-label {
-    color: #000000;
+    color: #0C2340;
   }
   .mat-form-field-outline {
     color: transparent;
