--- a/src/app/modules/converter/components/form/form.component.html
+++ b/src/app/modules/converter/components/form/form.component.html
@@ -62,4 +62,4 @@
     </div>
 </app-card>
 
-<app-loading-overlay #loader *ngIf="isLoader"></app-loading-overlay>
+<app-loading-overlay *ngIf="isLoader"></app-loading-overlay>
