--- a/src/scss/custom-material.scss
+++ b/src/scss/custom-material.scss
@@ -128,6 +128,9 @@ mat-horizontal-stepper {
 .ng-star-inserted {
   outline: none;
 }
+.mat-sort-header-arrow {
+    color: #0077c7 !important;
+}
 
 .color {
   &-primary {
