--- a/src/app/modules/converter/components/list/list.component.html
+++ b/src/app/modules/converter/components/list/list.component.html
@@ -8,7 +8,7 @@
                 type="button"
                 color="primary"
                 mat-raised-button
-                routerLink="..">
+                (click)="back()">
                 Назад
             </button>
         </app-buttons>
