--- a/src/app/modules/converter/components/filter-param/filter-param.component.html
+++ b/src/app/modules/converter/components/filter-param/filter-param.component.html
@@ -2,7 +2,12 @@
     <app-row>
         <mat-form-field class="w200" appearance="outline">
             <mat-label>Параметр</mat-label>
-            <input matInput required formControlName="key">
+            <input matInput formControlName="key" [matAutocomplete]="keyAutocomplete">
+            <mat-autocomplete #keyAutocomplete="matAutocomplete">
+                <mat-option *ngFor="let param of params" [value]="param">
+                    {{param}}
+                </mat-option>
+            </mat-autocomplete>
         </mat-form-field>
 
         <mat-form-field appearance="outline" class="w180">
