--- a/src/app/modules/converter/components/list/list.component.html
+++ b/src/app/modules/converter/components/list/list.component.html
@@ -107,9 +107,10 @@
             <ng-container matColumnDef="params">
                 <th mat-header-cell *matHeaderCellDef>Параметры</th>
                 <td mat-cell *matCellDef="let item">
-                    <div *ngFor="let param of params">
-                        {{param}}={{item[param]}}
-                    </div>
+                    <span *ngFor="let param of params; let i = index">
+                        {{param}}={{item[param]}};&nbsp;
+                        <br *ngIf="(i + 1) % 2 === 0">
+                    </span>
                 </td>
             </ng-container>
 
