fix (filter autocomplete) search by title

--- a/src/app/modules/converter/components/filter-param/filter-param.component.html
+++ b/src/app/modules/converter/components/filter-param/filter-param.component.html
@@ -4,7 +4,7 @@
             <mat-label>Параметр</mat-label>
             <input matInput formControlName="key" [matAutocomplete]="keyAutocomplete">
             <mat-autocomplete #keyAutocomplete="matAutocomplete">
-                <mat-option *ngFor="let param of params" [value]="param">
+                <mat-option *ngFor="let param of getParams(form.get('key').value)" [value]="param">
                     {{param}}
                 </mat-option>
             </mat-autocomplete>
